Add p5.js for visualisation

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "hooks": {
       "pre-push": "npm run lint && npm run test -- --passWithNoTests"
     }
+  },
+  "dependencies": {
+    "eslint-config-p5js": "^1.0.1"
   }
 }
