--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "start": "babel-node src/index.js",
-    "build:dev": "webpack --config webpack.dev.config.js"
+    "build:dev": "webpack --config webpack.dev.config.js --watch",
+    "serve": "webpack serve"
   },
   "license": "ISC",
   "devDependencies": {
@@ -30,8 +31,11 @@
     "@babel/plugin-transform-runtime": "^7.12.0",
     "@babel/runtime": "^7.12.0",
     "eslint-config-p5js": "^1.0.1",
+    "http-server": "^0.12.3",
     "jsdom": "^16.4.0",
+    "p5": "^1.1.9",
     "webpack": "^5.1.1",
-    "webpack-cli": "^4.0.0"
+    "webpack-cli": "^4.0.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
